# rusty-book-manager

./: Cargo.toml  Dockerfile  Makefile.toml  compose.yaml  curl_list.md
.github/workflows/: ci.yaml
adapter/: Cargo.toml
adapter/migrations/: 20241021001148_start.down.sql  20241021001148_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  checkout.rs  mod.rs  user.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs
api/src/handler/: auth.rs  book.rs  mod.rs  user.rs
api/src/model/: auth.rs  book.rs  user.rs
api/src/route/: auth.rs  book.rs  user.rs  v1.rs
api/tests/api/: book.rs  helper.rs
data/: initial_setup.sql
frontend/app/_components/: Header.tsx
infra/frontend/app/_components/: AddUserButton.tsx
kernel/: Cargo.toml
kernel/src/model/: id.rs  mod.rs
kernel/src/model/auth/: event.rs  mod.rs
kernel/src/model/book/: mod.rs
kernel/src/model/checkout/: event.rs  mod.rs
kernel/src/model/user/: event.rs  mod.rs
kernel/src/repository/: auth.rs  checkout.rs  user.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  env.rs  error.rs
src/: main.rs
