[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["macros"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
tokio = { version = "1.40.0", features = ["full"] }

[[bin]]
name = "app"
path = "src/main.rs"

[dev-dependencies]
rstest = "0.23.0"
