[package]
name = "rusty-book-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "registry", "shared", "adapter"]

[workspace.package]
edition = "2021"
publish = false
license = "MIT"

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
registry = { path = "./registry" }
shared = { path = "./shared" }
async-trait = "0.1.83"
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["macros"] }
derive-new = "0.7.0"
utoipa = { version = "5.1.1", features = ["axum_extras", "uuid", "chrono"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
secrecy = "0.10.3"
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
mockall = "0.13.0"
redis = { version = "0.27.5", features = ["tokio-rustls-comp"] }
bcrypt = "0.15.1"
itertools = "0.13.0"
tower = "0.5.1"
tracing = { version = "0.1.40", features = ["log"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
tokio-stream = "0.1.16"
garde = { version = "0.20.0", features = ["derive", "email"] }

[dependencies]
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
thiserror.workspace = true
adapter.workspace = true
api.workspace = true
registry.workspace = true
shared.workspace = true
anyhow.workspace = true
axum.workspace = true
utoipa.workspace = true
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
opentelemetry = "0.26.0"
tracing-opentelemetry = "0.27.0"
opentelemetry-jaeger = { version = "0.22.0", features = ["rt-tokio"] }

[profile.dev.package.sqlx-macros]
opt-level = 3